CREATE TABLE IF NOT EXISTS pos_stock (
    product_id   BIGINT PRIMARY KEY,
    store_code   VARCHAR(10) NOT NULL DEFAULT 'GANGNAM01',
    stock        INT NOT NULL,
    updated_at   TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
);

INSERT INTO pos_stock (product_id, store_code, stock) VALUES
    (1, 'GANGNAM01', 30),
    (2, 'GANGNAM01', 25),
    (3, 'GANGNAM01', 40),
    (4, 'GANGNAM01', 12),
    (5, 'GANGNAM01', 55);

CREATE USER IF NOT EXISTS 'debezium'@'%' IDENTIFIED BY 'dbz1234';
GRANT SELECT, RELOAD, SHOW DATABASES, REPLICATION SLAVE, REPLICATION CLIENT ON *.* TO 'debezium'@'%';
FLUSH PRIVILEGES;
