// 제로픽(ZeroPick) ERD — docs/sql/*.sql (H2 MariaDB 모드 검증 완료) 기준
// 사용법: https://dbdiagram.io 접속 → 좌측 편집창에 아래 전체 붙여넣기 → 우측 자동 렌더 → Export(PNG/PDF)
// 컬럼명 snake_case. 서비스 간 참조(product_id, member_id)는 Database per Service 원칙으로 FK 없음 — 점선은 논리 참조.

//// product_db — product-service (:8081)

Table product {
  id bigint [pk, increment]
  name varchar(120) [not null]
  brand varchar(60) [not null]
  category varchar(30) [not null, note: '간식/디저트·음료·탄산·조미료/소스·건강기능식품']
  price int [not null, note: 'CHECK >= 0']
  image_url varchar(255)
  stock int [not null, default: 0, note: 'CHECK >= 0 — 초과주문 DB 차단']
  claim_type varchar(20) [note: '무당류/저당류/무첨가당 — NULL = 표기 확인 안 됨']
  kcal decimal(7,1) [not null]
  sugar_g decimal(6,2) [not null]
  carb_g decimal(6,2) [not null]
  protein_g decimal(6,2)
  fat_g decimal(6,2)
  sodium_mg decimal(8,2)
  serving_size decimal(7,1) [note: '1회 제공량']
  serving_unit varchar(10) [note: 'g/ml']
  nutrition_facts_url varchar(255) [note: '영양성분표 원본 이미지']
  verification_source varchar(255) [note: '표시정보 출처']
  created_at timestamp [not null]
}

Table sweetener {
  id bigint [pk, increment]
  name varchar(40) [not null, unique, note: '감미료 마스터 15종']
}

Table product_sweetener {
  product_id bigint [pk, ref: > product.id]
  sweetener_id bigint [pk, ref: > sweetener.id]
  amount_g decimal(6,2) [note: '함량(g) — 시드에 있음']
  note: '제외 필터가 인덱스를 타도록 M:N 조인'
}

Table product_allergen {
  product_id bigint [pk, ref: > product.id]
  allergen varchar(30) [pk, note: '우유·대두·밀·땅콩']
}

//// commerce_db — commerce-service (:8082)

Table member {
  id bigint [pk, increment]
  email varchar(120) [not null, unique]
  password varchar(255) [not null, note: '해시 저장']
  name varchar(40) [not null]
  created_at timestamp [not null]
}

Table cart_item {
  id bigint [pk, increment]
  member_id bigint [not null, ref: > member.id]
  product_id bigint [not null, note: '타 서비스 — FK 없음']
  qty int [not null, note: 'CHECK > 0']
  added_at timestamp [not null]
  indexes { (member_id, product_id) [unique] }
}

Table orders {
  id bigint [pk, increment]
  order_no varchar(20) [not null, unique, note: 'ZPxxxx']
  member_id bigint [not null, ref: > member.id]
  total_price bigint [not null]
  status varchar(15) [not null, default: 'PENDING', note: 'PENDING→PAID→COMPLETED / CANCELLED']
  payment_method varchar(20) [note: 'PAID 시점 기록']
  ordered_at timestamp [not null]
  paid_at timestamp
}

Table order_item {
  id bigint [pk, increment]
  order_id bigint [not null, ref: > orders.id]
  product_id bigint [not null, note: '타 서비스 — FK 없음']
  product_name varchar(120) [not null, note: '주문 시점 스냅샷']
  qty int [not null]
  unit_price bigint [not null, note: '스냅샷']
}

//// reco_db — recommendation-service (:8083)

Table preference {
  member_id bigint [pk, note: '타 서비스 — FK 없음']
  price_min int [not null, default: 0]
  price_max int [not null, default: 100000]
  updated_at timestamp [not null]
}

Table pref_excluded_sweetener {
  member_id bigint [pk, ref: > preference.member_id]
  sweetener varchar(40) [pk, note: '하드 필터 — 절대 노출 금지']
}

Table pref_category {
  member_id bigint [pk, ref: > preference.member_id]
  category varchar(30) [pk]
}

Table pref_allergen {
  member_id bigint [pk, ref: > preference.member_id]
  allergen varchar(30) [pk]
}

Table behavior_log {
  id bigint [pk, increment]
  member_id bigint [not null]
  product_id bigint [not null]
  category varchar(30) [not null, note: '이벤트 payload 비정규화']
  event_type varchar(20) [not null, note: 'PRODUCT_VIEWED(+1)/CART_ADDED(0)/ORDER_COMPLETED(+50)']
  qty int
  unit_price bigint
  order_no varchar(20)
  payment_method varchar(20)
  occurred_at timestamp [not null]
}

Table reco_result {
  id bigint [pk, increment]
  member_id bigint [not null]
  product_id bigint [not null]
  rank_no int [not null, note: 'rank 는 예약어']
  score decimal(8,2) [not null]
  reason varchar(255)
  created_at timestamp [not null]
}

Table reco_click {
  id bigint [pk, increment]
  member_id bigint [not null]
  product_id bigint [not null]
  clicked_at timestamp [not null, note: '선택 6번 클릭률 집계']
}

Table stock {
  product_id bigint [pk, note: 'stock-service 원장 (독립 DB) — 상품 ID가 원장 키']
  online_stock int [not null, note: '온라인 판매 가용 재고 — 결제 시 조건부 UPDATE 차감']
  pos_stock int [not null, note: 'POS(오프라인) 재고 — CDC 이벤트 절대값 반영(멱등)']
  store_code varchar(20)
  version bigint [not null, note: '낙관적 락(@Version)']
  updated_at timestamp
}

Table pos_stock {
  product_id bigint [pk, note: '가상 POS DB(MariaDB, binlog) — Debezium 소스 캡처 대상']
  store_code varchar(10) [not null]
  stock int [not null]
  updated_at timestamp [not null]
}

Table pos_stock_ledger {
  product_id bigint [pk, note: '가상 정산 DB — Kafka Connect JDBC Sink 반영']
  store_code varchar(20)
  stock int
  updated_at varchar(64) [note: 'Sink 자동 매핑 제약으로 문자열 보관']
}
